Update color palette
Added to giovanni0918.github.io v0.02:
Fixed web app manifest.
Updated color palette in favor of higher contrast ratios.

Todo:
setup custom domain:
https://help.github.com/articles/using-a-custom-domain-with-github-pages
/

--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-  "name": "Giovanni Orlando | Web",
-  "short_name": "Giovanni0918",
-  "theme_color": "4CAF50",
-  "background_color": "#4CAF50",
-  "display": "standalone",
-  "scope": "/",
-  "start_url": "/"
+    "name": "Giovanni Orlando | Web",
+    "short_name": "Giovanni0918",
+    "theme_color": "#3F51B5",
+    "background_color": "#3F51B5",
+    "display": "standalone",
+    "scope": "/",
+    "start_url": "/"
 }
