--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "sw-toolbox": "^3.2.1"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.14.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
     "gulp-css": "^0.1.0",
     "gulp-imagemin": "^3.0.3",
