--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,26 @@
 {
-    "name": "Giovanni Orlando | Web",
-    "short_name": "Giovanni0918",
-    "theme_color": "#3F51B5",
-    "background_color": "#3F51B5",
-    "display": "standalone",
-    "scope": "/",
-    "start_url": "/"
+	"name": "Giovanni Orlando | Web",
+	"short_name": "Giovanni0918",
+	"theme_color": "#3F51B5",
+	"background_color": "#3F51B5",
+	"display": "standalone",
+	"scope": "/",
+	"start_url": "/",
+	"icons": [{
+		"src": "/dist/images/touch/icon-128x128.png",
+		"sizes": "128x128",
+		"type": "image/png"
+	}, {
+		"src": "/dist/images/touch/apple-touch-icon.png",
+		"sizes": "152x152",
+		"type": "image/png"
+	}, {
+		"src": "/dist/images/touch/ms-touch-icon-144x144-precomposed.png",
+		"sizes": "144x144",
+		"type": "image/png"
+	}, {
+		"src": "/dist/images/touch/chrome-touch-icon-192x192.png",
+		"sizes": "192x192",
+		"type": "image/png"
+	}]
 }
