Add rel=noopener where necessary
https://jakearchibald.com/2016/performance-benefits-of-rel-noopener/

--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "web-dev",
     "frontend",
     "angular",
+    "reactjs",
     "backend",
     "php",
+    "react-starter-kit",
+    "n-queens",
     "omdb-search",
     "movo-pwa",
     "giovanni0918",
