--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "gulp-uglify": "^2.0.1"
   },
   "scripts": {
+    "start": "gulp && npm run dev",
+    "dev": "bundle exec jekyll serve",
+    "build": "gulp && JEKYLL_ENV=production bundle exec jekyll build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -28,9 +31,12 @@
     "web-dev",
     "frontend",
     "angular",
+    "jekyll",
     "reactjs",
     "backend",
     "php",
+    "ruby",
+    "dailycssimages",
     "react-starter-kit",
     "n-queens",
     "omdb-search",
@@ -38,7 +44,7 @@
     "giovanni0918",
     "giovanniorlando"
   ],
-  "author": "Giovanni Orlando <gorlandor@gmail.com>",
+  "author": "Giovanni Orlando Rivera <gorlandor@gmail.com>",
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/giovanni0918/giovanni0918.github.io/issues"
