--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,3 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
 # Site settings
 # These are used to personalize your new site. If you look in the HTML files,
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
@@ -23,6 +13,7 @@ url: https://giovanni-orlando.com
 enforce_ssl: giovanni-orlando.com
 repository: giovanni0918/giovanni0918.github.io
 google_analytics: UA-82693415-1 
+permalink: /:categories/:title
 profiles:
  - account: facebook
    username: giovanni0918
