--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "start": "gulp && npm run dev",
     "dev": "bundle exec jekyll serve",
     "build": "gulp && JEKYLL_ENV=production bundle exec jekyll build",
+    "windows-build": "gulp && set \"JEKYLL_ENV=production\" && bundle exec jekyll build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
