Patch / Update Services page

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Giovanni Orlando 👑 (@giovanni0918) Web
+title: Giovanni Orlando 👑 (@giovanni0918)
 author: Giovanni Orlando
 email: gorlandor@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
