Add linkedin url to site.profiles and update svg paths

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,8 @@ profiles:
    username: +giovanniorlandoi7
  - account: instagram
    username: giovanni0918
+ - account: linkedin
+   username: in/giovanni-orlando
  - account: medium
    username: giovanni0918
  - account: pinterest
