--- a/manifest.json
+++ b/manifest.json
@@ -1,26 +1,51 @@
 {
-	"name": "Giovanni Orlando | Web",
-	"short_name": "Giovanni0918",
-	"theme_color": "#3F51B5",
-	"background_color": "#3F51B5",
-	"display": "standalone",
-	"scope": "/",
-	"start_url": "/",
-	"icons": [{
-		"src": "/dist/images/touch/icon-128x128.png",
-		"sizes": "128x128",
-		"type": "image/png"
-	}, {
-		"src": "/dist/images/touch/apple-touch-icon.png",
-		"sizes": "152x152",
-		"type": "image/png"
-	}, {
-		"src": "/dist/images/touch/ms-touch-icon-144x144-precomposed.png",
-		"sizes": "144x144",
-		"type": "image/png"
-	}, {
-		"src": "/dist/images/touch/chrome-touch-icon-192x192.png",
-		"sizes": "192x192",
-		"type": "image/png"
-	}]
+  "name": "Giovanni Orlando — Web",
+  "short_name": "Giovanni0918",
+  "theme_color": "#3f51b5",
+  "background_color": "#3f51b5",
+  "display": "standalone",
+  "Scope": "/",
+  "start_url": "/",
+  "icons": [
+    {
+      "src": "dist/images/icons/icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "dist/images/icons/icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "dist/images/icons/icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "dist/images/icons/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "dist/images/icons/icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png"
+    },
+    {
+      "src": "dist/images/icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "dist/images/icons/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+      "src": "dist/images/icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
