--- a/package.json
+++ b/package.json
@@ -4,39 +4,40 @@
   "description": "Source code for Giovanni Orlando https://giovanni-orlando.com",
   "main": "index.js",
   "dependencies": {
-    "babel-polyfill": "^6.23.0",
-    "express": "^4.14.1",
-    "firebase": "^3.7.8",
-    "sw-toolbox": "^3.5.1"
+    "@firebase/app-types": "^0.1.2",
+    "babel-polyfill": "^6.26.0",
+    "express": "^4.16.3",
+    "firebase": "^4.11.0",
+    "sw-toolbox": "^3.6.0"
   },
   "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-regenerator": "^6.24.1",
-    "babel-preset-env": "^1.4.0",
-    "css-loader": "^0.28.0",
-    "file-loader": "^0.11.1",
-    "html-loader": "^0.4.5",
-    "json-loader": "^0.5.4",
-    "node-sass": "^4.5.2",
-    "sass-loader": "^6.0.3",
-    "style-loader": "^0.17.0",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.4.1"
+    "babel-plugin-transform-regenerator": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
+    "html-loader": "^0.5.5",
+    "json-loader": "^0.5.7",
+    "mini-css-extract-plugin": "^0.2.0",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.12"
   },
   "scripts": {
-    "start": "webpack && npm run copy && npm run serve",
-    "build": "webpack -p && npm run copy && JEKYLL_ENV=production bundle exec jekyll build",
+    "start": "yarn webpack && yarn copy && yarn serve",
+    "build": "./node_modules/.bin/webpack --mode production && yarn copy && JEKYLL_ENV=production bundle exec jekyll build",
     "copy": "cp -r _assets/images/ dist/ && cp -r node_modules/sw-toolbox/sw-toolbox.js dist/",
     "serve": "bundle exec jekyll serve",
-    "windows-build": "webpack -p && npm run copy && set \"JEKYLL_ENV=production\" && bundle exec jekyll build"
+    "webpack": "./node_modules/.bin/webpack --mode development",
+    "windows-build": "./node_modules/.bin/webpack --mode production && yarn copy && set \"JEKYLL_ENV=production\" && bundle exec jekyll build"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/giovanni0918/giovanni0918.github.io.git"
-  },
+  "repository": "git+https://github.com/giovanni0918/giovanni0918.github.io.git",
   "keywords": [
     "web-dev",
     "frontend",
