--- a/package.json
+++ b/package.json
@@ -4,30 +4,31 @@
   "description": "Source code for Giovanni Orlando https://giovanni-orlando.com",
   "main": "index.js",
   "dependencies": {
-    "@firebase/app-types": "^0.1.2",
-    "babel-polyfill": "^6.26.0",
-    "express": "^4.16.3",
-    "firebase": "^4.11.0",
+    "@babel/polyfill": "^7.2.5",
+    "@firebase/app-types": "^0.3.4",
+    "express": "^4.16.4",
+    "firebase": "^5.8.4",
     "sw-toolbox": "^3.6.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-syntax-async-functions": "^6.13.0",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-regenerator": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "css-loader": "^0.28.11",
-    "file-loader": "^1.1.11",
+    "@babel/core": "^7.3.4",
+    "@babel/plugin-proposal-async-generator-functions": "^7.2.0",
+    "@babel/plugin-transform-async-to-generator": "^7.3.4",
+    "@babel/plugin-transform-regenerator": "^7.3.4",
+    "@babel/plugin-transform-runtime": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.0",
+    "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "json-loader": "^0.5.7",
-    "mini-css-extract-plugin": "^0.2.0",
-    "node-sass": "^4.7.2",
-    "sass-loader": "^6.0.7",
-    "style-loader": "^0.20.3",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.1.1",
-    "webpack-cli": "^2.0.12"
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.29.5",
+    "webpack-cli": "^3.2.3"
   },
   "scripts": {
     "start": "yarn webpack && yarn copy && yarn serve",
