--- a/package.json
+++ b/package.json
@@ -4,36 +4,35 @@
   "description": "Source code for Giovanni Orlando https://giovanni-orlando.com",
   "main": "index.js",
   "dependencies": {
-    "@babel/polyfill": "^7.2.5",
-    "@firebase/app-types": "^0.3.4",
-    "express": "^4.16.4",
-    "firebase": "^5.8.4",
-    "sw-toolbox": "^3.6.0"
+    "@babel/polyfill": "^7.7.0",
+    "@firebase/app-types": "^0.3.10",
+    "core-js": "^3.6.3",
+    "express": "^4.17.1",
+    "firebase": "^7.6.2",
+    "workbox-sw": "^4.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/plugin-proposal-async-generator-functions": "^7.2.0",
-    "@babel/plugin-transform-async-to-generator": "^7.3.4",
-    "@babel/plugin-transform-regenerator": "^7.3.4",
-    "@babel/plugin-transform-runtime": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
-    "babel-loader": "^8.0.5",
-    "css-loader": "^2.1.0",
-    "file-loader": "^3.0.1",
+    "@babel/core": "^7.7.7",
+    "@babel/plugin-transform-async-to-generator": "^7.7.4",
+    "@babel/plugin-transform-regenerator": "^7.7.5",
+    "@babel/plugin-transform-runtime": "^7.7.6",
+    "@babel/preset-env": "^7.7.7",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.2",
+    "file-loader": "^5.0.2",
     "html-loader": "^0.5.5",
-    "json-loader": "^0.5.7",
-    "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.11.0",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "url-loader": "^1.1.2",
-    "webpack": "^4.29.5",
-    "webpack-cli": "^3.2.3"
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^7.3.1",
+    "style-loader": "^1.1.2",
+    "url-loader": "^3.0.0",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
   },
   "scripts": {
-    "start": "yarn webpack && yarn copy && yarn serve",
+    "start": "npm run webpack && npm run copy && npm run serve",
     "build": "./node_modules/.bin/webpack --mode production && yarn copy && JEKYLL_ENV=production bundle exec jekyll build",
-    "copy": "cp -r _assets/images/ dist/ && cp -r node_modules/sw-toolbox/sw-toolbox.js dist/",
+    "copy": "cp -r _assets/images dist/ && cp -r node_modules/workbox-sw/build/* dist/",
     "serve": "bundle exec jekyll serve",
     "webpack": "./node_modules/.bin/webpack --mode development",
     "windows-build": "./node_modules/.bin/webpack --mode production && yarn copy && set \"JEKYLL_ENV=production\" && bundle exec jekyll build"
