--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "giovanni0918.github.io",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Source code for Giovanni Orlando https://giovanni-orlando.com",
   "main": "index.js",
   "dependencies": {
-    "@babel/polyfill": "^7.12.1",
     "@firebase/app-types": "^0.6.1",
-    "core-js": "^3.8.1",
+    "core-js": "^3.8.2",
     "express": "^4.17.1",
-    "firebase": "^8.2.0",
+    "firebase": "^8.2.2",
     "workbox-sw": "^6.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
+    "@babel/plugin-syntax-class-properties": "^7.12.1",
     "@babel/plugin-transform-async-to-generator": "^7.12.1",
     "@babel/plugin-transform-regenerator": "^7.12.1",
     "@babel/plugin-transform-runtime": "^7.12.10",
@@ -26,8 +26,8 @@
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
-    "webpack": "^5.10.3",
-    "webpack-cli": "^4.2.0"
+    "webpack": "^5.12.2",
+    "webpack-cli": "^4.3.1"
   },
   "scripts": {
     "start": "npm run webpack && npm run copy && npm run serve",
